<resources>
    <!-- Main -->
    <string name="app_name">GeoPlanner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="application">Приложение</string>
    <string name="launch_activity">Открыть приложение</string>
    <string name="edit_place_notification">Редактировать место</string>
    <string name="settings_notification">Настройки</string>
    <string name="location_updates_label">Сервис запущен</string>

    <string name="permission_rationale">Необходим доступ к местоположению в любом режиме</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Настройки</string>
    <string name="ok">OK</string>
    <string name="yes">Да</string>
    <string name="add">Добавить</string>
    <string name="blank_space">\u0020</string>
    <string name="remove_location_updates">Отключить сервис</string>

    <string name="some_id">Автоматизируй действия по геоточкам</string>

    <string name="geoplanner">Добро пожаловать в GeoPlanner</string>
    <string name="title_activity_settings">Settings</string>


    <string name="choose_action">Выберите действие</string>
    <string-array name="actions">
        <item>Звонок на телефон</item>
        <item>Отправка SMS</item>
        <item>Уведомление</item>
        <item>Включить режим \'Не беспокоить\'</item>
        <item>Выключить режим \'Не беспокоить\'</item>
        <item>Включить Wi-Fi</item>
        <item>Выключить Wi-Fi</item>
    </string-array>


    <!-- Permissions -->
    <string name="location_permission">Перейти к подтверждению разрещений к местоположению</string>
    <string name="start">Начать</string>



    <!-- MapsFragment -->
    <string name="input_address">Город, улица/район, дом</string>
    <string name="address_not_found">Адрес не найден в базе.</string>
    <string name="add_geo">Добавить геоточку:</string>
    <string name="add_address">Добавить адрес:</string>
    <string name="add_address_title">Добавление адреса</string>
    <string name="edit_place">Изменение места</string>
    <string name="continue_edit">Перейти к редактированию?</string>
    <string name="our_geoposition">Ваша геопозиция:</string>
    <string name="our_address">Ваш адрес:</string>
    <string name="settingsInternet">Открыть настройки</string>

    <!-- Builder -->
    <string name="entry">при входе:</string>
    <string name="entryDot">при входе.</string>
    <string name="entryUp">При входе:</string>
    <string name="exit">при выходе:</string>
    <string name="exitDot">при выходе.</string>
    <string name="exitUp">При выходе:</string>
    <string name="address"><![CDATA[<font color=#000000>Адрес:</font>]]></string>
    <string name="addresslog">Адрес:</string>
    <string name="call">Звонок на телефон</string>
    <string name="sms">Отправка SMS</string>
    <string name="notification">Уведомление</string>
    <string name="on">Включить режим</string>
    <string name="off">Включить режим</string>
    <string name="dnd">\'Не беспокоить\'</string>
    <string name="dnd_on">Включить режим \'Не беспокоить\'</string>
    <string name="dnd_off">Выключить режим \'Не беспокоить\'</string>
    <string name="wifi_on">Включить Wi-Fi</string>
    <string name="wifi_off">Выключить Wi-Fi</string>
    <string name="radius">Радиус:</string>
    <string name="meter">метр</string>
    <string name="meters1">метра</string>
    <string name="meters2">метров</string>
    <string name="actions_not_chosen">Никаких действий не выбрано.</string>

    <!-- PlaceActivity -->
    <string name="input_sms">Введите сообщение</string>
    <string name="input_notification">Введите текст уведомления</string>


    <!-- Preference & SnackBars & Notifications-->
    <string name="service_header">Сервис</string>
    <string name="service_update">Частота обновления геолокации</string>
    <string name="service_update_in_meters">Обновления при смещении в метрах</string>
    <string name="geo_accuracy_in_meters">Предел точности геолокации в метрах</string>
    <string name="max_radius_tittle">Предел полосы прокрутки радиуса</string>
    <string name="service_actice">Активность сервиса</string>
    <string name="service_autostart">Автозапуск при включении</string>
    <string name="service_not_active">Сервис выключен</string>
    <string name="service_active_for_archive">Для архивации включите сервис</string>
    <string name="service_active_for_open">Для открытия места включите сервис</string>
    <string name="service_active_for_add">Для добавления места включите сервис</string>
    <string name="service_active_for_unarchive">Для разархивации включите сервис</string>
    <string name="archive_header">Архив</string>
    <string name="archive_delete">Очистить архив</string>
    <string name="archive_unarchive">Разархивация записей</string>
    <string name="archive_delete_title_ask">Очистить архив?</string>
    <string name="log_delete">Очистить лог</string>
    <string name="clear">Очистить</string>
    <string name="cancel">Отмена</string>
    <string name="archive_unarchive_title_ask">Разархивирование</string>
    <string name="archive_unarchive_ask">Это действие переместит все архивированные записи в активный список мест. Вы уверены?</string>
    <string name="archive_delete_ask">Это действие удалит все архивированные записи. Вы уверены что хотите продолжить?</string>
    <string name="log_delete_ask">Это действие очистит журнал событий. Вы уверены что хотите продолжить?</string>
    <string name="access_for_dnd">Пожалуйста, предоставьте доступ к \'Не беспокоить\'</string>
    <string name="access_manual">Пожалуйста, предоставьте разрешения вручную</string>
    <string name="access_permissions">Пожалуйста, предоставьте разрешения</string>
    <string name="turn_on">Включить</string>
    <string name="manual_access_for_geo">Пожалуйста, предоставьте в вручную доступ к геоданным</string>
    <string name="geo_access_all_time">Пожалуйста, разрешите доступ к геоданным в любом режиме"</string>
    <string name="internet_no_connection">Нет интернет соединения</string>
    <string name="back">Назад</string>


    <!-- AdapterFragments-->
    <string name="search_by_place">Поиск по месту</string>
    <string name="complete">Готово</string>
    <string name="archive">Архив</string>
    <string name="log">Журнал событий</string>

    <!-- Messages Preferences -->

</resources>