<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="service_category"
        app:title="@string/service_header">

        <androidx.preference.SwitchPreferenceCompat
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="switchService"
            app:title="@string/service_actice" />

        <androidx.preference.ListPreference
            app:defaultValue="0"
            app:dependency="switchService"
            app:entries="@array/seconds_entries"
            app:entryValues="@array/entry_seconds"
            app:iconSpaceReserved="false"
            app:key="listSeconds"
            app:title="@string/service_update"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.ListPreference
            app:defaultValue="0"
            app:dependency="switchService"
            app:entries="@array/meters_entries"
            app:entryValues="@array/entry_meters"
            app:iconSpaceReserved="false"
            app:key="listMeters"
            app:title="@string/service_update_in_meters"
            app:useSimpleSummaryProvider="true" />

        <SeekBarPreference
            android:key="geo_accuracy"
            app:dependency="switchService"
            app:iconSpaceReserved="false"
            app:title="@string/geo_accuracy_in_meters"
            android:max="100"
            app:min="30"
            app:adjustable="true"
            app:isPreferenceVisible="true"
            app:seekBarIncrement="1"
            app:showSeekBarValue="true"
            android:defaultValue="45" />

        <androidx.preference.ListPreference
            app:defaultValue="500"
            app:dependency="switchService"
            app:entries="@array/max_radius_entries"
            app:entryValues="@array/max_radius_value"
            app:iconSpaceReserved="false"
            app:key="maxRadius"
            app:title="@string/max_radius_tittle"
            app:useSimpleSummaryProvider="true" />

        <androidx.preference.CheckBoxPreference
            app:dependency="switchService"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="checkBoxAutostart"
            app:title="@string/service_autostart" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/archive_header">

        <urum.geoplanner.utils.UnArchiveAllDialogPreference
            android:summary="Разархивировать все записи"
            android:title="@string/archive_unarchive"
            app:iconSpaceReserved="false" />
        <urum.geoplanner.utils.ClearArchiveDialogPreference
            android:summary="Удалить все записи из архива"
            android:title="@string/archive_delete"
            app:iconSpaceReserved="false" />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:iconSpaceReserved="false"
        app:key="settings_category"
        app:title="@string/application">

        <androidx.preference.PreferenceScreen
            android:summary="Открыть лог срабатываний"
            android:title="Журнал событий"
            app:iconSpaceReserved="false">
            <intent android:action="open.log.geoplanner" />
        </androidx.preference.PreferenceScreen>

        <androidx.preference.PreferenceScreen
            android:summary="Открыть настройки приложения GeoPlanner"
            android:title="Настройки приложения"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.settings.APPLICATION_DETAILS_SETTINGS"
                android:data="package:urum.geoplanner" />
        </androidx.preference.PreferenceScreen>

        <androidx.preference.PreferenceScreen
            android:summary="https://t.me/dream_0f_me"
            android:title="Ведущий разработчик"
            app:iconSpaceReserved="false">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://t.me/dream_0f_me" />
        </androidx.preference.PreferenceScreen>

        <!-- <PreferenceScreen
             android:summary="Импортированная системная настройка"
             android:title="Настройка через намерение"
             app:iconSpaceReserved="false">
             <intent android:action="android.settings.WIFI_SETTINGS"/>
         </PreferenceScreen>-->
    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>
